[gd_scene load_steps=7 format=2]

[ext_resource path="res://Battle/Entity_Battle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Others/cursor.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/_bitmap_font____romulus_by_pix3m-d6aokem.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/FontBold.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Damage:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25, -5 ), Vector2( 25, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Damage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Damage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="P0" type="Button"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
flat = true
script = ExtResource( 1 )

[node name="Turn" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, -30 )
scale = Vector2( 5, 5 )
z_index = 5
color = Color( 0.0470588, 0.407843, 0.929412, 1 )
polygon = PoolVector2Array( -1.35055, -21.03, 4.29088, -21.0182, 1.72063, -17.0343 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Damage = SubResource( 1 )

[node name="Animations" type="Node2D" parent="."]
pause_mode = 2
scale = Vector2( 3, 3 )

[node name="Spells" type="Node2D" parent="."]
pause_mode = 2
scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -109.29, 14.0269 )
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 2 )

[node name="Damage" type="Label" parent="."]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.0588235 )
margin_left = 25.0
margin_top = -20.0
margin_right = 79.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "250"

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="Name" type="Label" parent="."]
margin_left = -33.4376
margin_top = 92.5964
margin_right = 34.5624
margin_bottom = 120.596
custom_fonts/font = ExtResource( 4 )
text = "Rat A"

[connection signal="focus_entered" from="." to="." method="_on_P0_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_P0_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_P0_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
